# opengl-learning

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: camera.h  shader.h  shapes.h  textures.h
src/: camera.c  main.c  shader.c  shapes.c  tex_frag_shader.vert  textures.c  vertex_shader.vert
src/shaders/: 3d_fragment_shader.frag  basic_fragment_shader.frag  tex_frag_shader.vert  trans_vertex_shader.vert
